--- a/CS1.Rmd
+++ b/CS1.Rmd
@@ -119,8 +119,5 @@ CM = confusionMatrix(table(classifications, test$Style))
 CM
 
 #9 Set up an EDA
-mergeDF %>% ggplot(aes(x = State, y = ABV)) + geom_bin2d() + theme_classic()
-
-theme_set(theme_bw())  
-mergeDF %>% ggplot(aes(x = State, y = ABV,color=State)) + geom_count(show.legend = FALSE)
+mergeDF %>% ggplot(aes(x = State, y = ABV)) + geom_count(show.legend = FALSE) + theme_solarized()
 ```
