--- a/CS1.Rmd
+++ b/CS1.Rmd
@@ -34,19 +34,24 @@ breweries <- read.csv("breweries.csv", header= TRUE)
 BrewsPerState <- breweries %>% group_by(State) %>% count(State)
 
 
-#1- We then sorted the list in a descending order
+#1- Sorting
+#We then sorted the list in a descending order
 BrewsPerState %>% ggplot(aes(x=reorder(State, -n),y=n)) + geom_bar(stat = "identity") +
   ggtitle( "Number of Breweries per State") + xlab("State") + ylab("Number of Breweries") +
   geom_text(aes(label = signif(n, digits = 2)), nudge_y = 2)  + theme_solarized()
 
-#2 Merge Data, merging on Brew_ID, we had to change the excel file to Brew_ID on one CSV
-
+#2 Merge Data
+#We merged the brewery data with the beer data, merging on Brew_ID.  
+#To do this we had to change the Brewery_id in the Beer dataset to Brew_ID.
 mergeDF = inner_join(beers,breweries, by = ("Brew_ID"))
-head(mergeDF)
+head(mergeDF, n=6)
+tail(mergeDF, n=6)
 mergeDF <- dplyr::rename(mergeDF,BreweryName = Name.y)
 mergeDF <- dplyr::rename(mergeDF,NameofBeer = Name.x)
 
-#3 Drop all na values from merged dataset
+#3 NA values
+#To handle the missing values (values of NA), all the rows that had a NA value 
+#for any of the values for the columns were dropped out from the merged dataset. 
 mergeDF <- na.omit(mergeDF)
 head(mergeDF)
 
